@@ -3,6 +3,8 @@ herbstluftwm migration guide
 
 This guide describes the list of incompatible changes between the different
 herbstluftwm releases and how to migrate scripts and configuration.
+See the link:NEWS[] file for a list of all changes and new features.
+
 
 Current git version
 -------------------
