@@ -1,6 +1,9 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
+See the link:MIGRATION[] file for changes that introduced incompatibility to
+older versions.
+
 Current git version
 -------------------
 
